test/good/generics/complex06.px

func f<T>(T? x) T? def
    if x is null do
        return null
    return x!

print f(3), f(x=-7.89), f(null)
