test/bad/functions/void1.px

func f() def
    return

x = 3
x = f()
